--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "description": "",
   "main": "site/index.js",
   "scripts": {
-    "api": "",
-    "serve": "cd public && python -m SimpleHTTPServer 8080",
-    "build": "enoki build -o public/ && browserify site/ -o public/bundle.js -t require-globify -t enoki/transform -t es2040",
     "start": "enoki dev",
-    "panel": "enoki panel",
+    "serve": "cd public && python -m SimpleHTTPServer 8080",
+    "dev": "budo site/ -l -o -P --s bundle.js -d content -d site/assets -- -t enoki/transform -t require-globify",
+    "build": "enoki build && browserify site/ -o public/bundle.js -t require-globify -t enoki/transform -t es2040",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -22,13 +21,14 @@
     "nanocomponent": "^6.0.0-1",
     "object-keys": "^1.0.11",
     "object-values": "^1.0.0",
-    "require-globify": "^1.4.1",
     "tags-input": "^1.1.1",
     "xhr": "^2.4.0",
     "xtend": "^4.0.1"
   },
   "devDependencies": {
     "browserify": "^14.4.0",
-    "es2040": "^1.2.6"
+    "budo": "^10.0.4",
+    "es2040": "^1.2.6",
+    "require-globify": "^1.4.1"
   }
 }
