--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "enoki dev",
     "serve": "cd public && python -m SimpleHTTPServer 8080",
     "dev": "budo site/ -l -o -P --s bundle.js -d content -d site/assets -- -t enoki/transform -t require-globify",
-    "build": "enoki build && browserify site/ -o public/bundle.js -t require-globify -t enoki/transform -t es2040",
+    "build": "enoki build && browserify site/ -o public/bundle.js -t require-globify -t enoki/transform -t yo-yoify -t es2040",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -20,7 +20,8 @@
     "object-keys": "^1.0.11",
     "object-values": "^1.0.0",
     "xhr": "^2.4.0",
-    "xtend": "^4.0.1"
+    "xtend": "^4.0.1",
+    "yo-yoify": "^3.7.3"
   },
   "devDependencies": {
     "browserify": "^14.4.0",
