--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "object-keys": "^1.0.11",
     "object-values": "^1.0.0",
     "require-globify": "^1.4.1",
+    "simplemde": "^1.11.2",
     "tags-input": "^1.1.1",
     "xhr": "^2.4.0",
     "xtend": "^4.0.1"
