cleaning up default

--- a/site/blueprints/about.yml
+++ b/site/blueprints/about.yml
@@ -1,5 +1,15 @@
 title: Page
 
+files:
+  fields:
+    title: 
+      title: Title
+      type: text
+
+    text:
+      capiton: Text
+      type: textarea
+
 fields:
   title:
     label: Title
