--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "starter-kit",
+  "name": "enoki-starterkit",
   "version": "1.0.1",
   "description": "",
   "main": "site/index.js",
@@ -17,6 +17,7 @@
   "dependencies": {
     "brfs": "^1.4.3",
     "choo": "^6.0.0",
+    "enoki": "^1.0.2",
     "nano-markdown": "^1.2.0",
     "nanocomponent": "^6.0.0-1",
     "object-keys": "^1.0.11",
