--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "choo": "^6.0.0",
     "enoki": "^1.0.2",
     "nano-markdown": "^1.2.0",
+    "nanoassert": "^1.1.0",
     "nanocomponent": "^6.0.0-1",
     "object-keys": "^1.0.11",
     "object-values": "^1.0.0",
