--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "choo": "^6.6.1",
     "choo-dat-hypha": "^0.3.0",
+    "gr8": "^3.1.4",
     "hypha": "^0.1.3",
     "markdown-it": "^8.4.0",
     "nanocomponent": "^6.5.0",
+    "nanoreset": "^1.2.0",
     "object-keys": "^1.0.11",
     "object-values": "^1.0.0",
     "query-string": "^5.0.0",
