--- a/source/package.json
+++ b/source/package.json
@@ -1,11 +1,12 @@
 {
   "name": "enoki-panel",
-  "version": "0.0.2",
+  "version": "0.1.0",
   "description": "A little javascript static site generator",
   "main": "index.js",
   "scripts": {
     "start": "watchify index.js -o ../bundles/0.1.0/bundle.js -t brfs -t sheetify -p [ css-extract -o ../bundles/0.1.0/bundle.css ] index.js",
-    "build": "browserify index.js -o ../bundles/0.1.0/bundle.js -t brfs -t yo-yoify -t [ sheetify -u sheetify-cssnext ] -g es2040 -p [ css-extract -o ../bundles/0.1.0/bundle.css ]"
+    "build": "browserify index.js -o ../bundles/0.1.0/bundle.js -t brfs -t yo-yoify -t [ sheetify -u sheetify-cssnext ] -g es2040 -p [ css-extract -o ../bundles/0.1.0/bundle.css ]",
+    "publish": "dat sync dist --no-ignoreHidden"
   },
   "keywords": [],
   "author": "Jon-Kyle <contact@jon-kyle.com> (http://jon-kyle.com)",
