--- a/source/package.json
+++ b/source/package.json
@@ -22,6 +22,7 @@
     "object-keys": "^1.0.11",
     "object-values": "^1.0.0",
     "query-string": "^5.0.0",
+    "simple-color-picker": "^0.1.2",
     "simplemde": "^1.11.2",
     "smarkt": "0.0.1",
     "tags-input": "^1.1.1",
