--- a/source/package.json
+++ b/source/package.json
@@ -17,6 +17,7 @@
     "gr8": "^3.1.4",
     "hypha": "^0.1.3",
     "markdown-it": "^8.4.0",
+    "markdown-it-task-lists": "^2.1.0",
     "nanocomponent": "^6.5.0",
     "nanoreset": "^1.2.0",
     "object-keys": "^1.0.11",
