--- a/source/package.json
+++ b/source/package.json
@@ -13,6 +13,7 @@
   "license": "MIT",
   "dependencies": {
     "choo": "^6.6.1",
+    "choo-tts": "^1.0.0",
     "enoki": "^2.0.2",
     "gr8": "^3.1.4",
     "hypha": "^0.1.3",
